--- a/css/style.css
+++ b/css/style.css
@@ -131,4 +131,26 @@ blockquote {
         grid-column: 2 / 3;
         grid-row: 2 / 5;
     }
+
+    .extra-info {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        display: grid;
+        align-items: center;
+    }
+
+    .image1 {
+        grid-column: 3 / 4;
+        grid-row: 3 / 4;
+    }
+
+    .image2 {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+    }
+}
+
+.footer .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
